--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     </head>
 <body>
     <h1><strong>Aline Lima de Sousa Lira</strong></h1>
-    <h2> Sobre mim: </h2>
-    <a href="https://www.linkedin.com/in/alinelimasl" target="_blank"><img src="https://scontent.fjpa1-1.fna.fbcdn.net/v/t1.18169-9/23472951_10213816584229993_7532285146993207121_n.jpg?_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=09cbfe&amp;_nc_ohc=MZiqoxVWtqAAX9ro65z&amp;_nc_ht=scontent.fjpa1-1.fna&amp;oh=00_AfB6-JLXip6E4mFX2a2G5cfOyXzCnePktLbz4kOVIChadg&amp;oe=646F3C51" alt="Foto Aline" width="300px"></a>
-    <p> Oi, tudo bem? Me chamo Aline, tenho 33 anos - isso mesmo a idade de Jesus - e começando uma nova profissão. <strong> Nunca é tarde para recomeçar!</strong> Sou formada em Direito, e ainda empreendi por dois anos na Curta Comida Criativa, onde criei dois tipos de copos comestíveis. </p>
+    <a href="#sobre-mim">Sobre mim</a>
+    <a href="#pagina">Página que eu gosto</a>
+    <br>
+    <a href="https://www.linkedin.com/in/alinelimasl" target="_blank"><img src="https://scontent.fjpa1-1.fna.fbcdn.net/v/t1.18169-9/23472951_10213816584229993_7532285146993207121_n.jpg?_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=09cbfe&amp;_nc_ohc=MZiqoxVWtqAAX9ro65z&amp;_nc_ht=scontent.fjpa1-1.fna&amp;oh=00_AfB6-JLXip6E4mFX2a2G5cfOyXzCnePktLbz4kOVIChadg&amp;oe=646F3C51" alt="Foto Aline" width="300px" id="foto"></a>
+    <p class="descricao"> Oi, tudo bem? Me chamo Aline, tenho 33 anos - isso mesmo a idade de Jesus - e começando uma nova profissão. <strong> Nunca é tarde para recomeçar!</strong> Sou formada em Direito, e ainda empreendi por dois anos na Curta Comida Criativa, onde criei dois tipos de copos comestíveis. </p>
     
     <p>Sou uma pessoa muito criativa, e sempre fui uma curiosa com tecnologia, e então cai de paraquedas no mundo de Desenvolvimento Web, e estou mergulhada nesse mundinho maravilhoso, cheio de coisas estranhas - e amando cada instante! </p>
     
-    <p>Orgulhosa nordestina, sou da terra onde o sol nasce primeiro <strong> João Pessoa - PB</strong>, brasileira e agora de mudança marcada para Porto Alegre - RS, vou criar um novo sotaque o <em> paraibuchês.</em></p>
+    <p class="resido">Orgulhosa nordestina, sou da terra onde o sol nasce primeiro <strong> João Pessoa - PB</strong>, brasileira e agora de mudança marcada para Porto Alegre - RS, vou criar um novo sotaque o <em> paraibuchês.</em></p>
 <h3>Minhas habilidades:</h3>
 <ul>
-    <li>Liderança;</li>
-    <li>Comunicação;</li>
-    <li>Determinação;</li>
-    <li>Disciplina;</li>
-    <li>Adaptação;</li>
-</ul>
+    <li class="lideranca">Liderança;</li>
+    <li class="comunicacao">Comunicação;</li>
+    <li class="determinacao">Determinação;</li>
+    <li class="disciplina">Disciplina;</li>
+    <li class="adaptacao">Adaptação;</li>
+    </ul>
+    <a href="#minha-foto">Minha foto</a>
+    <a href="https://chat.openai.com/auth/login" target="_blank">Melhor amigo do futuro DEV!</a>
 </body>
 </html>
